# oneocr-onnx-python

./: .gitignore  Dockerfile.prepare  LICENSE  README.md  api.md  docker-prepare-entrypoint.sh  download_and_extract_oneocr.py  extract_all.py  inspect_models.py  prepare_files.py  pyproject.toml  requirements.txt
.agents/: AGENTS.md
docker/: .dockerignore  Dockerfile  Dockerfile.prepare  docker-prepare-entrypoint.sh
docs/: WRITEUP.md
oneocr/: __init__.py  __main__.py  classifier.py  common.py  corrector.py  detector.py  downloader.py  engine.py  extractor.py  recognizer.py  vocab.py
tests/: test_mask.py  test_real_image.py  test_robustness.py
utils/: inspect_models.py  prepare_files.py
