[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oneocr"
version = "0.1.0"
description = "A clean, modular Python wrapper and inference pipeline for the Windows 11 Snipping Tool OCR engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "onnxruntime>=1.16.0",
    "numpy>=1.20.0",
    "Pillow>=9.0.0",
    "requests>=2.28.0",
    "packaging>=23.0",
    "onnx>=1.14.0",
]

[project.scripts]
oneocr = "oneocr.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["oneocr"]
